<resources>
    <string name="app_name">Awesome Splash</string>

    <!-- MainActivity Strings -->
    <string name="anim_tech">Animation Techniques</string>
    <string name="logo_or_path">Logo or Path | Currently: %1$s</string>
    <string name="logo">Logo</string>
    <string name="path">Path</string>

    <string name="circ_title">Circular Reveal Adjustments</string>
    <string name="logo_title">Logo Adjustments</string>
    <string name="path_title">Path Adjustments</string>
    <string name="app_title">App Title Adjustments</string>

    <string name="circ_duration">Set Duration | Currently: %1$sms</string>
    <string name="circ_color">Background Color</string>
    <string name="circ_point">Set Starting Point</string>
    <string name="circ_b">Bottom</string>
    <string name="circ_t">Top</string>
    <string name="circ_l">Left</string>
    <string name="circ_r">Right</string>

    <string name="logo_tech">Animation | Current: </string>
    <string name="logo_duration">Set Duration | Currently: %1$sms</string>

    <string name="path_d_duration">Set Drawing Duration | Currently: %1$sms</string>
    <string name="path_f_duration">Set Filling Duration | Currently: %1$sms</string>
    <string name="path_st_size">Set Stroke Size (1  &#8211; 9)</string>
    <string name="path_s_color">Stroke Color</string>
    <string name="path_f_color">Fill Color</string>

    <string name="title_et">Set App Title</string>
    <string name="title_font">Set Font</string>
    <string name="title_size">Set Title Size (sp)</string>
    <string name="title_duration">Set Duration | Currently: %1$sms</string>
    <string name="title_color">Set Title Color</string>


    <string-array name="colors">
        <item>@color/primary</item>
        <item>@color/accent</item>
        <item>@color/Brown</item>
        <item>@color/Cyan</item>
        <item>@color/Beige</item>
        <item>@color/Coral</item>
        <item>@color/Chocolate</item>
        <item>@color/Green</item>
        <item>@color/DarkViolet</item>
        <item>@color/WhiteSmoke</item>
        <item>@color/Black</item>
        <item>@color/Blue</item>
        <item>@color/DarkRed</item>
        <item>@color/DodgerBlue</item>
        <item>@color/YellowGreen</item>
    </string-array>


</resources>
