<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etStrokeSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/path_st_size"
            android:inputType="numberDecimal"
            android:maxLength="1"
            android:textColor="@color/accent" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtPathDrawDur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/path_d_duration"
        android:textColor="@color/accent"
        android:textSize="16sp" />

    <SeekBar
        android:id="@+id/sbPathDrawDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_horizontal"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/path_s_color"
            android:textColor="@color/accent"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spPathStrokeColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtPathFillDur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/path_f_duration"
        android:textColor="@color/accent"
        android:textSize="16sp" />

    <SeekBar
        android:id="@+id/sbPathFillDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_horizontal"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/path_f_color"
            android:textColor="@color/accent"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spPathFillColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>