<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_et"
            android:inputType="text"
            android:maxLength="25"
            android:textColor="@color/accent" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etTitleSize"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/title_size"
            android:inputType="numberDecimal"
            android:maxLength="2"
            android:textColor="@color/accent" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtTitleDur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/title_duration"
        android:textColor="@color/accent"
        android:textSize="16sp" />

    <SeekBar
        android:id="@+id/sbTitleDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_horizontal"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/title_font"
            android:textColor="@color/accent"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spTitleFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAnimTitleTech"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/logo_tech"
            android:textColor="@color/accent"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtTitleTech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_margin="10dp"
            android:textColor="@color/accent"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_horizontal"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/path_f_color"
            android:textColor="@color/accent"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spTitleColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>