<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- private int animCircularRevealDuration;
    private int revealFlagX;
    private int revealFlagY;
    private int backgroundColor;-->

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:layout_margin="10dp"
        android:text="@string/circ_point"
        android:textColor="@color/accent"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/rgX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_margin="10dp"
            android:text="@string/circ_color"
            android:textColor="@color/accent"
            android:textSize="16sp" >

        </RadioGroup>

        <RadioGroup
            android:id="@+id/rgY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_margin="10dp"
            android:text="@string/circ_color"
            android:textColor="@color/accent"
            android:textSize="16sp" ></RadioGroup>

    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:layout_margin="10dp"
        android:text="@string/circ_duration"
        android:textColor="@color/accent"
        android:textSize="16sp" />

    <SeekBar
        android:id="@+id/sbCircDuration"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_margin="10dp"
            android:text="@string/circ_color"
            android:textColor="@color/accent"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spCircColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>