<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <!-- Circular Reveal Settings -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top"
                android:layout_margin="10dp"
                android:text="@string/circ_title"
                android:textColor="@color/primary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/primary" />

            <include layout="@layout/cr_adju_view" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
    <!-- END Circular Reveal Settings -->

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/sLogoOrPath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:checked="false"
        android:text="@string/logo_or_path"
        android:textColor="@color/accent"
        android:textSize="16sp"
        android:theme="@style/AwesomeSplashTheme" />


    <!-- Logo Settings -->
    <android.support.v7.widget.CardView
        android:id="@+id/cvLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top"
                android:layout_margin="10dp"
                android:text="@string/logo_title"
                android:textColor="@color/primary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/primary" />

            <include layout="@layout/logo_adju_view" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <!-- END Logo Settings -->


    <!-- Path Settings -->
    <android.support.v7.widget.CardView
        android:id="@+id/cvPath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top"
                android:layout_margin="10dp"
                android:text="@string/path_title"
                android:textColor="@color/primary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/primary" />

            <include layout="@layout/path_adju_view" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <!-- END Path Settings -->


    <!-- App Title Settings -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top"
                android:layout_margin="10dp"
                android:text="@string/app_title"
                android:textColor="@color/primary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/primary" />

            <include layout="@layout/title_adju_view" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <!-- END App Title Settings -->

</LinearLayout>